aws-ec2.tf
# configured aws provider with proper credentials
provider "aws" {
  region    = var.aws_region
  profile   = "default"
}

# create default vpc if one does not exit
resource "aws_default_vpc" "default_vpc" {

  tags    = {
    Name  = "utrains default vpc"
  }
}

# use data source to get all avalablility zones in region
data "aws_availability_zones" "available_zones" {}

# create default subnet if one does not exit
resource "aws_default_subnet" "default_az1" {
  availability_zone = data.aws_availability_zones.available_zones.names[0]

  tags   = {
    Name = "utrains default subnet"
  }
}

# use data source to get a registered amazon linux 2 ami
data "aws_ami" "amazon_linux_2" {
  most_recent = true
  owners      = ["amazon"]
  
  filter {
    name   = "owner-alias"
    values = ["amazon"]
  }

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
}

# Generates a secure private key and encodes it as PEM
resource "tls_private_key" "ssh_key_for_connection" {
  algorithm = "RSA"
  rsa_bits  = 4096
}
# Create the Key Pair
resource "aws_key_pair" "ssh_key_for_connection" {
  key_name   = "ec2_key_pair"  
  public_key = tls_private_key.ssh_key_for_connection.public_key_openssh
}
# Save file
resource "local_file" "ssh_key" {
  filename = "${aws_key_pair.ssh_key_for_connection.key_name}.pem"
  content  = tls_private_key.ssh_key_for_connection.private_key_pem
}

# launch the ec2 instance and install jenkis
resource "aws_instance" "ec2_instance" {
  ami                    = data.aws_ami.amazon_linux_2.id
  instance_type          = var.aws_instance_type
  subnet_id              = aws_default_subnet.default_az1.id
  vpc_security_group_ids = [aws_security_group.ssh_ec2_security_group.id]
  key_name               = aws_key_pair.ssh_key_for_connection.key_name
  #user_data            = file("myfile.sh")

  tags = {
    Name = "utrains Jenkins Server and ssh security group"
  }
}

# an empty resource block
# resource "null_resource" "name" {
#   # ssh into the ec2 instance 
#   connection {
#     type        = "ssh"
#     user        = "ec2-user"
#     private_key = file(local_file.ssh_key.filename)
#     host        = aws_instance.ec2_instance.public_ip
#   }
#   # wait for ec2 to be created
#   depends_on = [aws_instance.ec2_instance]
# }
